[package]
name = "communication_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
tokio = {version = "1.19.2", features = ["full"]}
rust-ini = "0.18.0"
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.1.3"
rand = "0.8.4"